chore: progress on cycles endpoint
